# client-server-model

./: CMakeLists.txt  Makefile  README.md  client.c  os_db.db  server.c  sql_manipulations.c  sql_manipulations.h
z_net_lib/: z_net_client.c  z_net_client.h  z_net_common.h  z_net_common_pvt.h  z_net_server.c  z_net_server.h
